<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/black"

    tools:context="com.jucse.doorlockfingerprintauthentication.SignUpActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/toolbar"
        app:titleTextColor="#ffff"
        android:background="@color/colorAccent"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">



            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/username"
                    android:hint="@string/username_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorLight" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/email3"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorLight" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/password"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorLight" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/add1"
                    android:hint="@string/address_hint"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorLight" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/tel1"
                    android:hint="@string/phone_number_hint"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorLight" />
            </android.support.v7.widget.CardView>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.20dp"
                android:gravity="center"

                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/with_fingerprint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/with_fingerprint"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="17.00dp" />

                <RadioButton
                    android:id="@+id/with_fingerprint_and_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="With Password"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="17.00dp" />
            </RadioGroup>

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
